@@ -4,7 +4,9 @@ Changelog
 2.4.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- If search term string changes (searchableText) and the form is submitted,
+  reset the all query and start with a new one
+  [cekk]
 
 
 2.4.0 (2014-11-24)
